# xorg__lib__libXxf86misc

./: .gitignore  ChangeLog  Makefile.am  configure.ac  xxf86misc.pc.in
man/: Makefile.am  XF86Misc.man
src/: .cvsignore  Makefile.am  XF86Misc.c
